Closed
Bug 1263982
Opened 9 years ago
Closed 9 years ago
[e10s] It require extra one wheel tick in order to scroll the page
Categories
(Core :: Widget, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| e10s | + | --- |
| firefox47 | --- | unaffected |
| firefox48 | --- | fixed |
People
(Reporter: alice0775, Assigned: enndeakin)
References
Details
(Keywords: regression, ux-consistency)
Attachments
(3 files)
|
1.07 KB,
patch
|
Details | Diff | Splinter Review | |
|
965 bytes,
patch
|
Details | Diff | Splinter Review | |
|
1.12 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
After landing Bug 982121, It require extra wheel tick in order to scroll the page if select pull down is open.
Steps To Reproduce:
1. Open web page with <select>
e.g. https://bugzilla.mozilla.org/userprefs.cgi?tab=settings
2. Open a select pull down
3. Attempt to scroll page
i.e., Turn mouse wheel
Actual Results:
It needs 2 tick to start scroll
( 1st tick: hide pulldown
2nd tick: scroll)
Expected Results:
1 tick to start scroll
( 1st tick: hide pulldown and scroll at the same time)
| Reporter | ||
Updated•9 years ago
|
Keywords: ux-jargon → ux-consistency
| Reporter | ||
Updated•9 years ago
|
Summary: It require extra one wheel tick in order to scroll the page → [e10s] It require extra one wheel tick in order to scroll the page
| Assignee | ||
Comment 1•9 years ago
|
||
We could just remove rolluponmousewheel="true" from the ContentSelectDropdown popup. This makes it not match non-e10s (we could change that too) but matches IE and Windows behaviour.
| Reporter | ||
Comment 2•9 years ago
|
||
By the way, I do not like IE/Edge/Chrome behavior, that's why I use Firefox.
Updated•9 years ago
|
tracking-e10s:
--- → +
Priority: -- → P1
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → enndeakin
Updated•9 years ago
|
Component: Layout → Widget
| Assignee | ||
Comment 3•9 years ago
|
||
This prevents the mousewheel from hiding the popup on e10s.
| Assignee | ||
Comment 4•9 years ago
|
||
This patch does the same with non-e10s select popups.
| Assignee | ||
Comment 5•9 years ago
|
||
The alternative is to allow the mousewheel to rollup the popups but change nsXULPopupManager::ShouldConsumeOnMouseWheelEvent to return false for the select popup.
| Assignee | ||
Comment 6•9 years ago
|
||
We should also fix the consume event flag to be consistent with other platforms. They ignore any existing value and have the result Rollup replace it.
This fixes the issue without changing the rollup behaviour.
Part 1 and 2 are an additional fix to match platform convention, but we could fix those in bug 1265308. We should use this patch for cross-platform consistency.
Attachment #8743875 -
Flags: review?(jmathies)
Updated•9 years ago
|
Attachment #8743875 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 7•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/2747cac2de2fcfd3233930a10e4fa560b3376b60
Bug 1263982, the return value of Rollup should override the consume value as with other platforms, r=jmathies
Comment 8•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Updated•9 years ago
|
status-firefox47:
--- → unaffected
Updated•9 years ago
|
QA Whiteboard: [good first verify]
You need to log in
before you can comment on or make changes to this bug.
Description
•