Bug 1263982, the return value of Rollup should override the consume value as with other platforms, r=jmathies